app/assets/stylesheets/pages/_home.scss
.home-wrapper {
  .left {
    width: 50vw;
    float: left;
  }

  .right {
    width: 50vw;
    float: right;
  }

  ul {
    padding-left: 0;
  }

  .font-2x {
    font-size: 2rem;
  }

  .font-3x {
    font-size: 3rem;
  }

  .card-one {
    position: relative;
    z-index: 4;
    background-image: image_url('thumbs_up_hero_desktop.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    padding-top: 135px;
  }

  .card-two {
    position: sticky;
    bottom: 0;
    z-index: 3;
    padding-top: 25px;

    ul {
      list-style: none;
    }

    .social-row .fa {
      padding-left: 10px;
      padding-right: 10px;
      color: $secondary-color;

      &:hover {
        color: $dark-blue-text;
      }
    }

    .social-row {
      padding-top: 50px;
    }
  }

  .card-three {
    position: sticky;
    bottom: 0;
    z-index: 2;
    padding-top: 25px;
  }

  .card-four {
    position: sticky;
    bottom: 0;
    z-index: 1;
    padding-top: 25px;
  }

  .card {
    width: 100vw;
    height: 100vh;
    text-align: center;

    color: $dark-blue-text;

    .fa {
      color: $dark-blue-text;
    }

    h1 {
      color: #fff;
      font-size: 5rem;

      strong {
        font-size: 6rem;
        display: block;
        text-transform: uppercase;
      }
    }

    h2 {
      font-size: 4.5rem;
    }

    p {
      font-size: 1.8rem;
    }

    @media only screen and (max-width: $xs-max-width) { // xs
      padding-top: $navbar-height + 50px;
      padding-bottom: $navbar-height + 50px;

      h1,
      h1 strong {
        font-size: 3.5rem;
      }

      h2 {
        font-size: 3.5rem;
      }

      h3 {
        font-size: 2.5rem;
      }
    }

    .black-overlay {
      opacity: 0.8;
    }

    .icon-wrapper {
      position: absolute;
      bottom: $medium-spacing;
      text-align: center;
      color: #fff;
      width: 100%;
      font-size: 2rem;
    }
  }
}

